# enhancetrans

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: tauri-build.mjs  tauri-dev.mjs
src/: App.tsx  liveAudio.ts  react-shim.d.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs
